--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href="#Our_posibilities" class="nav__link">Our posibilities</a>
                 <a href="#About" class="nav__link">About</a>
                 <a href="#Contacts" class="nav__link">Contacts</a>
-                <a href="<a href="#Contacts" class="nav__link">Contacts</a>" class="nav__link">Download</a>
+                <a href="https://drive.google.com/drive/folders/1TJU-rQ7EG5Uqy3XOhPVLvpK2AXtkzpT6?usp=share_link" class="nav__link">Download</a>
             </nav>
 
             <div class="header__block">
