--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <a href="#Our_posibilities" class="nav__link">Our posibilities</a>
                 <a href="#About" class="nav__link">About</a>
                 <a href="#Contacts" class="nav__link">Contacts</a>
+                <a href="#Contacts" class="nav__link">Download</a>
             </nav>
 
             <div class="header__block">
